provisioning-v2/deployments/ubuntu-shell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-shell
spec:
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: ubuntu
    image: ubuntu
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
  hostNetwork: true
  dnsPolicy: Default
