provisioning-v2/deployments/nginx-ingress-tls-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-agic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
    - secretName: SECRET_NAME
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
